# ai-solarpunk-story-bot

./: .env.template  .gitignore  GITHUB_PUBLISH.md  README.md  TASKS.md  ai_future.sh  bot-manager.sh  cron_wrapper.sh  main.py  organize_code.sh  pyproject.toml  run.sh  test_output.txt  twitter_api_test.py  twitter_client_test.py  ystemctl status cron | cat"
.cursor/rules/: ai-story-bot.mdc  pythonbestpractices.mdc  tamethebeast.mdc
archive/20250317_013802/stories/: story_arctic_1742161793.txt  story_arctic_1742162444.txt  story_arctic_1742164746.txt  story_arctic_1742174060.txt  story_coastal_1742163229.txt  story_coastal_1742163406.txt  story_desert_1742159683.txt  story_forest_1742161753.txt  story_forest_1742174180.txt  story_island_1741982834.txt  story_island_1741982864.txt  story_island_1742174083.txt  story_mountain_1742164477.txt  (+4 more)
config/: config.yaml  timezone.conf
docs/: story_generation.md
examples/: generate_tweet.py
output/: api_test_results.txt
scheduler/: daily_scheduler.sh
scripts/: generate_story.py  manage_service.sh  test_twitter_update.py
src/: __init__.py  ai_story_tweet_generator.py  image_generator.py  model_manager.py  story_generator.py  twitter_bot.py  twitter_client.py
src/api/: __init__.py  gemini.py  twitter.py
src/utils/: __init__.py  credentials.py
systemd/: ai-solarpunk-story.service  ai-solarpunk-story.timer
tests/: __init__.py  test_credentials.py  test_google_apis.py  test_image_generator.py  test_story_generation.py  test_story_generator.py  test_twitter_api.py  test_twitter_client.py  twitter_v2_test.py
